[project]
name = "rl-advanced"
version = "0.1.0"
description = "多AGV冲突消解深度强化学习仿真环境"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0",
    "numpy>=1.24",
    "matplotlib>=3.7",
    "hydra-core>=1.3",
    "trackio>=0.25",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.8",
]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = true
